--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 				Click's:
 </h1>
 
-<img src="img1.png" id="text" onclick="nm()" id="kep">
+<img src="img1.png" onclick="mm()">
 
 
 </center>
@@ -14,8 +14,7 @@
 				var click = 0
 function nm() {
 				click += 1
-				document.getElementById("text1").innerHTML = "Click's: " + click;
-document.getElementById("kep").src = "img2.png";}
+				document.getElementById("text1").innerHTML = "Click's: " + click;}
 </script>
 </head>
 <style>
