--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<body>
 <center>
 <h1 id="text1">
-				Click's:
+				Clicks: 0
 </h1>
 
 <img src="img1.png" id="text" onclick="nm()" id="kep">
@@ -14,7 +14,7 @@
 				var click = 0
 function nm() {
 				click += 1
-				document.getElementById("text1").innerHTML = "Click's: " + click;
+				document.getElementById("text1").innerHTML = "Clicks: " + click;
 document.getElementById("kep").src = "img2.png";}
 </script>
 </head>
