--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
-<meta charset="utf-16">
-<body class="all" background="image.png">
-<html>
+<html><head><meta charset="utf-16">
+    <link rel="icon" href="icon.jpg">
+</head><body class="all" background="image.png" link="white" alink="white" vlink="white">
+
 <title>
 KilledKingFireWolf
 </title>
 <header>
-    <body link="white" alink="white" vlink="white">
+    
         <lu>
         <h1 style="color: white;">
             <strong>
             KilledKingFireWolf
-        </h1>
+        </strong>
+    </h1>
+        <strong>
+    <span title="Subscribe to me! :)">
     <li class="a"><a href="https://www.youtube.hu/c/KilledKingFireWolf"> Csatorna </a></li>
+    </span>
+    <span title="Szipu weboldala">
     <li class="b"><a href="https://szipuslinkek.repl.co/dark/">SzipusLinkek</a></li>
+    </span>
+    <span title="Domcraft weboldala">
     <li class="a"><a href="https://www.dommapweb.tk/">DomMapWeb</a></li>
+    </span>
     </strong>
 </lu>
-</body>
+
 </header>
 <br>	
 <b>
-<div class="leiras">
+</b><div>
+<div class="leiras" style="float: left"><b>
 <dd>Amiket szeretek:</dd>
 <ul>
 <dd>-Minecraft</dd>
@@ -43,12 +53,36 @@ KilledKingFireWolf
 </ul>
 </b>
 </div>
-</head>
+<iframe class="latestVideoEmbed" vnum="0" cid="UCr8-tfaJx9GsNzSfYRz8ALg" width="600" height="340" frameborder="0" allowfullscreen="" src="https://youtube.com/embed/7WOVd44inwQ?controls=0&amp;autoplay=1" style="float: right; padding: 0px 5px;"></iframe>
+    </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script>
+var reqURL = "https://api.rss2json.com/v1/api.json?rss_url=" + encodeURIComponent("https://www.youtube.com/feeds/videos.xml?channel_id=");
+function loadVideo(iframe) {
+  $.getJSON(reqURL + iframe.getAttribute('cid'),
+    function(data) {
+      var videoNumber = (iframe.getAttribute('vnum') ? Number(iframe.getAttribute('vnum')) : 0);
+      console.log(videoNumber);
+      var link = data.items[videoNumber].link;
+      id = link.substr(link.indexOf("=") + 1);
+      iframe.setAttribute("src", "https://youtube.com/embed/" + id + "?controls=0&autoplay=1");
+    }
+  );
+}
+var iframes = document.getElementsByClassName('latestVideoEmbed');
+for (var i = 0, len = iframes.length; i < len; i++) {
+  loadVideo(iframes[i]);
+}
+</script>
+
+
 <style>
     header {
-    background-color:rgb(54, 54, 54);
+    background-color:rgb(75, 75, 75);
     width: 100%;
     margin: 20px 5px;
+    transition: 1s;
+    border-radius: 7px;
     }
     lu {
         display: inline-block;
@@ -74,6 +108,13 @@ KilledKingFireWolf
         background-attachment: fixed;
         height: 90%;
         width: 97%;
+        transition: 2s;
     }
+    body.all:hover {
+        transform: translateX(1.25%);
+    }
+    div.leiras {
+    height:400;
+    width:300;}
     </style>
-</html>
+</body></html>
