--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<meta charset="utf-16">
+<body class="all" background="image.png">
+<html>
+<title>
+KilledKingFireWolf
+</title>
+<header>
+    <body link="white" alink="white" vlink="white">
+        <lu>
+        <h1 style="color: white;">
+            <strong>
+            KilledKingFireWolf
+        </h1>
+    <li class="a"><a href="https://www.youtube.hu/c/KilledKingFireWolf"> Csatorna </a></li>
+    <li class="b"><a href="https://szipuslinkek.repl.co/dark/">SzipusLinkek</a></li>
+    <li class="a"><a href="https://www.dommapweb.tk/">DomMapWeb</a></li>
+    </strong>
+</lu>
+</body>
+</header>
+<br>	
+<b>
+<div class="leiras">
+<dd>Amiket szeretek:</dd>
+<ul>
+<dd>-Minecraft</dd>
+<dd>-Roblox</dd>
+<dd>-Stardew Valley</dd>
+</ul>
+<br>
+<dd>Amiket szeretek:</dd>
+<ul>
+<dd>-Anime</dd>
+<dd>-Informatika</dd>
+<dd>Programozás</dd>
+</ul>
+<br>
+<dd>Feliratkozások:</dd>
+<ul>
+<dd>-100 feliratkozó ✓</dd>
+<dd>-200 feliratkozó</dd>
+<dd>-300 feliratkozó</dd>
+</ul>
+</b>
+</div>
+</head>
+<style>
+    header {
+    background-color:rgb(54, 54, 54);
+    width: 100%;
+    margin: 20px 5px;
+    }
+    lu {
+        display: inline-block;
+        padding: 15px 30px;
+    }
+    li.a {
+        display: inline-block;
+        padding: 30px 30px;
+    }
+    li.b {
+        display: inline-block;
+        padding: 30px 5px;
+    }
+    h1 {
+        float: left;
+        transition: 1s;
+    }
 
+    dd {color: white;}
+    
+    body.all {
+        background-size: cover;
+        background-attachment: fixed;
+        height: 90%;
+        width: 97%;
+    }
+    </style>
+</html>
