--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ KilledKingFireWolf
 </div>
 </head>
 <style>
+    @media only screen and (max-width: 500px) {
+    header {background-color: red;}
+    }
     header {
     background-color:rgb(54, 54, 54);
     width: 100%;
